correct overflow-y

--- a/src/sass/components/addcontacts-str.scss
+++ b/src/sass/components/addcontacts-str.scss
@@ -121,3 +121,7 @@
   }
 
 }
+
+#myModal-addcontact-7 {
+  overflow-y: auto !important;
+}
