--- a/src/sass/components/employ-str.scss
+++ b/src/sass/components/employ-str.scss
@@ -129,3 +129,7 @@
   }
 
 }
+
+#myModal-employ-7 {
+  overflow-y: auto !important;
+}
